--- a/views/home-Tulpo.ejs
+++ b/views/home-Tulpo.ejs
@@ -58,7 +58,7 @@
 	                        <div class="col small-12 large-12" data-animate="fadeInDown" data-animated="true">
 	                            <div class="col-inner">
 	                                <div class="devteam-poxstion devteam-postions">
-	                                    <h2 style="text-align: center; font-size: 64px; color: #e6e6e6;">TULPO</h2>
+	                                    <h2 style="text-align: center; font-size: 64px; color: #e6e6e6; font-weight:bold;">TULPO</h2>
 	                                    <p style="text-align: center;">Đôi nét về chúng tôi</p>
 	                                </div>
 	                                <p style="text-align: center; font-size: 19px; color: #4d4d4d;">Chúng tôi có trên 4 năm kinh nghiệm nghiên cứu và phát triển Bot, Chatbot , nền tảng Blockchain với các giao diện sản phẩm đa dạng  Website, App, Dapp... Cùng đội ngũ giàu kinh nghiệm và xuất sắc về
@@ -69,7 +69,7 @@
 	                                            <div class="img has-hover img-amimation x md-x lg-x y md-y lg-y" id="image_657992088">
 	                                                <div class="img-inner dark"> <img src="./../assets/about-home.jpg" class="attachment-large size-large" alt="" height="732.5" width="850.1"></div>
 	                                            </div>
-	                                            <p class="des-php" style="text-align: center; background-color: white; border-radius: 8px; color: #4d4d4d;">Chuyên nghiệp – Tự tin – Sáng tạo
+	                                            <p class="des-php" style="text-align: center; background-color: white; border-radius: 8px; color: #4d4d4d;">Chuyên nghiệp – Tự tin – Sáng tạo<br>
 													Quá trình lịch sử học tập và rèn luyện đã tạo nên đội ngũ TulPo ngày hôm nay
 													Luôn sẵn sàng tâm huyết với các dự án của khách hàng.</p>
 	                                            <p class="read-more-dev"
@@ -86,7 +86,7 @@
 	                <div class="bg section-bg fill bg-fill  bg-loaded"></div>
 	                <div class="section-content relative">
 	                    <div class="devteam-postion">
-	                        <h2 style="text-align: center; font-size: 64px; color: #e6e6e6;">TULPO</h2>
+	                        <h2 style="text-align: center; font-size: 64px; color: #e6e6e6; font-weight: bold;">TULPO</h2>
 	                        <p style="text-align: center;">Dịch Vụ</p>
 	                        <div class="hr-service"></div>
 	                    </div>
@@ -94,16 +94,15 @@
 	                    <div class="row" id="row-570513346">
 	                        <div class="col small-12 large-12">
 	                            <div class="col-inner">
-	                                <div class="container">
 	                                    <div class="owl-carousel owl-loaded owl-drag">
 	                                        <div class="owl-stage-outer">
-	                                            <div class="owl-stage" style="transition: all 0.25s ease 0s; width: 4200px; transform: translate3d(-2450px, 0px, 0px);">
+	                                            <div class="owl-stage" style="transition: all 0.25s ease 0s; width: 6000px; transform: translate3d(-2450px, 0px, 0px);">
 	                                                <div class="owl-item cloned" style="width: 450px!important;">
 	                                                    <div class="items">
 	                                                        <div class="item-custom" style="text-align: center; padding-bottom: 10px;">
 	                                                            <div><img src="./../assets/sv-bot.jpg" alt="Logo 1"></div>
 	                                                            <div style="margin-top: 50px;"></div>
-	                                                            <h4 class="color-red">Chatbot/Bot</h4>
+	                                                            <h6 class="color-red" style="font-weight:bold;">Chatbot/Bot</h6>
 	                                                            <p style="padding: 0 15px;">Chatbot chăm sóc KH<br>Chatbot chiến dịch PR<br>Bot thanh toán tự động<br>Nền tảng Telegram, Messenger, Discord, Wechat</p>
 	                                                        </div>
 	                                                        <div class="button-slide"><a class="uppercase" href="#">Xem thêm</a></div>
@@ -114,7 +113,7 @@
 	                                                        <div class="item-custom" style="text-align: center; padding-bottom: 10px;">
 	                                                            <div><img src="./../assets/sv-tool.jpg" alt="Logo 1"></div>
 	                                                            <div style="margin-top: 50px;"></div>
-	                                                            <h4 class="color-red">Tool</h4>
+	                                                            <h6 class="color-red" style="font-weight:bold;">Tool</h6>
 	                                                            <p style="padding: 0 15px;">Tool chỉ báo<br>Tool đặt lệnh tự động<br>Tool check user<br>Tool phân tích</p>
 	                                                        </div>
 	                                                        <div class="button-slide"><a class="uppercase" href="#">Xem thêm</a></div>
@@ -125,7 +124,7 @@
 	                                                        <div class="item-custom" style="text-align: center; padding-bottom: 10px;">
 	                                                            <div><img src="./../assets/sv-blockchain.jpg" alt="Logo 1"></div>
 	                                                            <div style="margin-top: 50px;"></div>
-	                                                            <h4 class="color-red">Blockchain Platform</h4>
+	                                                            <h6 class="color-red" style="font-weight:bold;">Blockchain Platform</h6>
 	                                                            <p style="padding: 0 15px;">- Dịch vụ tài chính<br>Bảo hiểm<br>Truy suất nguồn gốc<br>Bất động sản<br>Smart Contract</p>
 	                                                        </div>
 	                                                        <div class="button-slide"><a class="uppercase" href="#">Xem thêm</a></div>
@@ -136,7 +135,7 @@
 	                                                        <div class="item-custom" style="text-align: center; padding-bottom: 10px;">
 	                                                            <div><img src="./../assets/sv-wallet.jpg" alt="Logo 1"></div>
 	                                                            <div style="margin-top: 50px;"></div>
-	                                                            <h4 class="color-red">Ví tiền điện tử</h4>
+	                                                            <h6 class="color-red" style="font-weight:bold;">Ví tiền điện tử</h6>
 	                                                            <p style="padding: 0 15px;">Ví phi tập trung<br>Công nghệ Multisignature<br>Swap<br>Ví nóng, ví lạnh</p>
 	                                                        </div>
 	                                                        <div class="button-slide"><a class="uppercase" href="#">Xem thêm </a></div>
@@ -147,7 +146,7 @@
 	                                                        <div class="item-custom" style="text-align: center; padding-bottom: 10px;">
 	                                                            <div><img src="./../assets/sv-web-mlm.jpg" alt="Logo 1"></div>
 	                                                            <div style="margin-top: 50px;"></div>
-	                                                            <h4 class="color-red">Website đa tầng</h4>
+	                                                            <h6 class="color-red" style="font-weight:bold;">Website đa tầng</h6>
 	                                                            <p style="padding: 0 15px;">Dịch vụ tài chính<br>Bán hàng trực tiếp<br>Quản lý người dùng<br>Thanh toán tự động</p>
 	                                                        </div>
 	                                                        <div class="button-slide"><a class="uppercase" href="#">Xem thêm </a></div>
@@ -158,7 +157,7 @@
 	                                                        <div class="item-custom" style="text-align: center; padding-bottom: 10px;">
 	                                                            <div><img src="./../assets/sv-airdrop.jpg" alt="Logo 1"></div>
 	                                                            <div style="margin-top: 50px;"></div>
-	                                                            <h4 class="color-red">Bounty/Airdrop</h4>
+	                                                            <h6 class="color-red" style="font-weight:bold;">Bounty/Airdrop</h6>
 	                                                            <p style="padding: 0 15px;">Xây dựng nội dung<br>Các bot tự động hóa<br>Lan tỏa chiến dịch<br>Quản lý User</p>
 	                                                        </div>
 	                                                        <div class="button-slide"><a class="uppercase" href="#">Xem thêm</a></div>
@@ -169,7 +168,7 @@
 	                                                        <div class="item-custom" style="text-align: center; padding-bottom: 10px;">
 	                                                            <div><img src="./../assets/sv-maker.jpg" alt="Logo 1"></div>
 	                                                            <div style="margin-top: 50px;"></div>
-	                                                            <h4 class="color-red">Market Maker</h4>
+	                                                            <h6 class="color-red" style="font-weight:bold;">Market Maker</h6>
 	                                                            <p style="padding: 0 15px;">Bot phân tích<br>Bot tăng Volume<br>Bot tự động đặt lệnh<br>Bot kiểm soát quá trình</p>
 	                                                        </div>
 	                                                        <div class="button-slide"><a class="uppercase" href="#">Xem thêm</a></div>
@@ -180,7 +179,7 @@
 	                                                        <div class="item-custom" style="text-align: center; padding-bottom: 10px;">
 	                                                            <div><img src="./../assets/sv-gate.jpg" alt="Logo 1"></div>
 	                                                            <div style="margin-top: 50px;"></div>
-	                                                            <h4 class="color-red">Cổng thanh toán</h4>
+	                                                            <h6 class="color-red" style="font-weight:bold;">Cổng thanh toán</h6>
 	                                                            <p style="padding: 0 15px;">Visa/MasterCard<br>Ví điện tử<br>BTC<br>ETH<br>EOS</p>
 	                                                        </div>
 	                                                        <div class="button-slide"><a class="uppercase" href="#">Xem thêm</a></div>
@@ -191,7 +190,7 @@
 	                                                        <div class="item-custom" style="text-align: center; padding-bottom: 10px;">
 	                                                            <div><img src="./../assets/sv-exchange.jpg" alt="Logo 1"></div>
 	                                                            <div style="margin-top: 50px;"></div>
-	                                                            <h4 class="color-red">Sàn giao dịch</h4>
+	                                                            <h6 class="color-red" style="font-weight:bold;">Sàn giao dịch</h6>
 	                                                            <p style="padding: 0 15px;">- Sàn tập trung<br>Sàn phi tập trung<br>Stable coin<br>Content</p>
 	                                                        </div>
 	                                                        <div class="button-slide"><a class="uppercase" href="#">Xem thêm</a></div>
@@ -205,7 +204,6 @@
 		                                </div>
 		                            </div>
 		                        </div>
-		                    </div>
 		                </div>
 			        </div>
 		        </section>
@@ -216,7 +214,7 @@
 		                    <div class="col medium-12 small-12 large-6">
 		                        <div class="col-inner">
 		                            <div class="devteam-postion" style="margin-top: 28px;">
-		                                <h2 style="font-size: 64px; color: #e6e6e6; text-align: left;">TULPO</h2>
+		                                <h2 style="font-size: 64px; color: #e6e6e6; text-align: left; font-weight: bold;">TULPO</h2>
 		                                <p style="text-align: left;">Tầm nhìn</p>
 		                            </div>
 		                            <div class="content-left">
@@ -290,12 +288,11 @@
 												<img src="https://lorempixel.com/800/400/food/2" style="width: 100px; height: 100px; border-radius:50%; border: 2px solid rgba(1, 1, 97, 0.199)">
 											</div>
 											<div style="background: rgba(128, 128, 128, 0);padding: 10px 50px; margin-left: 50px; margin-top:50px; border-radius: 20px; box-shadow: grey 1px 4px 1px 1px;">
-												<h5 style="text-align: center;"><strong>- CEO CÔNG TY DIGITAL MARKETING NINJA -</strong></h5>
+												<h5 style="text-align: center;"><strong>- Đặng Mạnh Dũng -</strong></h5>
 												<p style="font-weight: 600; color: grey;"><i>"Đã hợp tác với TulPo 3 lần. Có một điều mình cảm
 													thấy khá hài lòng đó là sự nhiệt tình và tư duy sáng
 													tạo, tư vấn làm và nâng cấp sản phẩm rất logic. Hứa
 													hẹn sẽ hợp tác nhiều trong tương lai."</i></p>
-												<div style="font-size: 18px; color: rgb(2, 2, 104); text-align: right; font-weight: 600;">Đặng Mạnh Dũng</div>
 											</div>
 										</div>
 									</a>
@@ -305,12 +302,11 @@
 												<img src="https://lorempixel.com/800/400/food/2" style="width: 100px; height: 100px; border-radius:50%; border: 2px solid rgba(1, 1, 97, 0.199)">
 											</div>
 											<div style="background: rgba(128, 128, 128, 0);padding: 10px 50px; margin-left: 50px; margin-top:50px; border-radius: 20px; box-shadow: grey 1px 4px 1px 1px;">
-												<h5 style="text-align: center;"><strong>- CEO CÔNG TY TNHH THIẾT BỊ CÔNG NGHIỆP AKIKO -</strong></h5>
+												<h5 style="text-align: center;"><strong>- Nguyễn Hoàng -</strong></h5>
 												<p style="font-weight: 600; color: grey;"><i>"Chưa biết tương lai TulPo mở rộng phát triển sang
 													mảng nào nữa không. Mình rất muốn mọi thứ công
 													nghệ bên mình do bên TulPo đảm nhiệm vì qua
 													những lần hợp tác thì thấy TulPo rất chuyên nghiệp."</i></p>
-												<div style="font-size: 18px; color: rgb(2, 2, 104); text-align: right; font-weight: 600;">Nguyễn Hoàng</div>
 											</div>
 										</div>
 									</a>
@@ -320,12 +316,11 @@
 												<img src="https://lorempixel.com/800/400/food/2" style="width: 100px; height: 100px; border-radius:50%; border: 2px solid rgba(1, 1, 97, 0.199)">
 											</div>
 											<div style="background: rgba(128, 128, 128, 0);padding: 10px 50px; margin-left: 50px; margin-top:50px; border-radius: 20px; box-shadow: grey 1px 4px 1px 1px;">
-												<h5 style="text-align: center;"><strong>- CTO IZICHAIN -</strong></h5>
+												<h5 style="text-align: center;"><strong>- Trần Thanh Tùng -</strong></h5>
 												<p style="font-weight: 600; color: grey;"><i>"Tôi là CEO của một công ty công nghệ gia công mảng
 													Web/App. Và TulPo là đối tác của chúng tôi trong
 													mảng Blockchain và Bot. TulPo là một đột ngũ rất
 													sáng tạo trong công việc."</i></p>
-												<div style="font-size: 18px; color: rgb(2, 2, 104); text-align: right; font-weight: 600;">Trần Thanh Tùng</div>
 											</div>
 										</div>
 									</a>
@@ -351,8 +346,8 @@
 	                    <div class="col content-dev medium-12 small-12 large-6" data-animate="fadeInRight">
 	                        <div class="col-inner">
 	                            <div class="hr-top" style="margin-top: 25px;"></div>
-	                            <h2 style="font-size: 41px; color: #424153; margin-bottom: 0px;">TulPo Việt Nam</h2>
-	                            <h5 style="color: #04328a; margin-top: 5px; text-transform: inherit; font-size: 22px;">Chuyên nghiệp – Tự tin – Sáng tạo</h5>
+	                            <h2 style="font-size: 41px; color: #424153; margin-bottom: 0px; font-weight: bold;">TulPo Việt Nam</h2>
+	                            <h5 style="color: #04328a; margin-top: 5px; text-transform: inherit; font-size: 22px; font-weight: bold;">Chuyên nghiệp – Tự tin – Sáng tạo</h5>
 	                            <p style="color: #4d4d4d; font-size: 18px; margin-top: 20px;">Với kinh nghiệm nhiều năm làm việc cùng với sự học
 									tập nâng cao trình độ không ngừng nghỉ của đội ngũ
 									TulPo, chúng tôi có thể tự tin mang đến cho quý
@@ -376,7 +371,7 @@
 	                                    </div>
 	                                </div>
 	                                <div class="icon-box-text last-reset">
-	                                    <h3 style="color: #424153;">Bảo mật tuyệt đối</h3>
+	                                    <h6 style="color: #424153;">Bảo mật tuyệt đối</h6>
 	                                    <div class="hr-title"></div>
 	                                    <p style="color: #4d4d4d;">Chúng tôi tôn trọng quyền
 											riêng tư của khách hàng khi xây
@@ -397,7 +392,7 @@
 	                                    </div>
 	                                </div>
 	                                <div class="icon-box-text last-reset">
-	                                    <h3 style="color: #424153;">Chất lượng hàng đầu</h3>
+	                                    <h6 style="color: #424153;">Chất lượng hàng đầu</h6>
 	                                    <div class="hr-title"></div>
 	                                    <p style="color: #4d4d4d;">Chất lượng luôn là vấn đề TulPo
 											đặt lên hàng đầu. Sự nhiệt
@@ -418,7 +413,7 @@
 	                                    </div>
 	                                </div>
 	                                <div class="icon-box-text last-reset">
-	                                    <h3 style="color: #424153; margin-top: 2px;">Chi phí hợp lý</h3>
+	                                    <h6 style="color: #424153; margin-top: 2px;">Chi phí hợp lý</h6>
 	                                    <div class="hr-title"></div>
 	                                    <p style="color: #4d4d4d;">Thị trường Blockchain và
 											Chatbot rất tiềm năng trong
@@ -434,7 +429,7 @@
 	                    <div class="col wp-down small-12 large-12" data-animate="fadeInUp">
 	                        <div class="col-inner" style="margin:53px 0px -88px 0px;">
 	                            <div class="devteam-postion" style="position: relative;">
-	                                <h2 style="text-align: center; font-size: 64px; color: #e6e6e6;">TULPO</h2>
+	                                <h2 style="text-align: center; font-size: 64px; color: #e6e6e6; font-weight: bold;">TULPO</h2>
 	                                <p style="text-align: center;">Tin tức – Sự kiện</p>
 	                            </div>
 	                        </div>
