--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -27,14 +27,14 @@
                                 <div class="img-inner dark" style="margin:0px 0px 0px 0px;"> <img src="./../assets/tulpo-logo-web.png" class="attachment-large size-large" alt="" style="height:98.74px!important;width:100px!important;"></div>
                             </div>
                         </div>
-                        <h6 class="color-white">Công ty TNHH giải pháp phần mềm</h6>
+                        <h6 class="color-white" style="font-weight:bold;">Công ty TNHH giải pháp phần mềm</h6>
                     </div>
                 </div>
             </div>
             <div class="row" id="row-870961340">
                 <div class="col logo-bottom medium-4 small-12 large-4">
                     <div class="col-inner">
-                        <h5 class="uppercase color-red">Tulpo</h5>
+                        <h5 class="uppercase color-red" style="font-weight: bold;">Tulpo</h5>
                         <div class="row" id="row-1185170378">
                             <div class="col small-12 large-12">
                                 <div class="col-inner" style="margin:0px 0px 0 0px;">
@@ -61,7 +61,7 @@
                 </div>
                 <div class="col medium-4 small-12 large-4">
                     <div class="col-inner">
-                        <h5 class="uppercase color-red">Doanh Nghiệp</h5>
+                        <h5 class="uppercase color-red" style="font-weight: bold;">Doanh Nghiệp</h5>
                         <div class="row" id="row-1747552391">
                             <div class="col small-12 large-12">
                                 <div class="col-inner" style="margin:0px 0px 0 0px;">
@@ -83,7 +83,7 @@
                 </div>
                 <div class="col medium-4 small-12 large-4">
                     <div class="col-inner">
-                        <h5 class="uppercase color-red">Liên kết</h5>
+                        <h5 class="uppercase color-red" style="font-weight: bold;">Liên kết</h5>
                         <div class="row" id="row-1008360503">
                             <div class="col small-12 large-12">
                                 <div class="col-inner" style="margin:0px 0px 0 0px;">
