--- a/public/style.css
+++ b/public/style.css
@@ -149,9 +149,9 @@
 }
 
 .wp-two .form-wp h2 {
-    color: red;
+    color: #29487d;
     font-size: 30px !important;
-    margin-bottom: 0
+    margin-bottom: 0;
 }
 
 .wp-two .form-wp h2 span {
@@ -170,9 +170,9 @@
 }
 
 .content-form .form-flat input[type=submit] {
-    background: #fb0719 !important;
+    background: #29487d !important;
     height: 50px;
-    border-radius: 5px
+    border-radius: 5px;
 }
 
 .img-popup {
@@ -13155,7 +13155,7 @@ html {
 }
 
 .wp-t .section-content .descript-devteam .abounts .img-inner img {
-    max-height: 555px
+    max-height: 600px;
 }
 
 .btn-contact {
