--- a/views/About/contact-Tulpo.ejs
+++ b/views/About/contact-Tulpo.ejs
@@ -12,129 +12,7 @@
 						<div class="row align-center" id="row-1187352800">
 							<div class="col price_title_pd small-12 large-12">
 								<div class="col-inner text-center dark" style="padding:0 0px 0px 0px;">
-									<h2 class="uppercase" style="text-align: center;">Liên hệ</h2>
-								</div>
-							</div>
-						</div>
-					</div>
-				</section>
-				<section class="section price_form_pd" id="section_965296973">
-					<div class="bg section-bg fill bg-fill bg-loaded"></div>
-					<div class="section-content relative">
-						<div class="row row-collapse align-center price_form_cs" id="row-690885778">
-							<div class="col medium-12 small-12 large-6">
-								<div class="col-inner" style="padding:0px 10px 0px 10px;">
-									<div class="img has-hover x md-x lg-x y md-y lg-y" id="image_1464777048">
-										<div class="img-inner dark"> 
-											<img src="./../assets/custom-talk.jpg" data-src="./../assets/custom-talk.jpg" class="attachment-large size-large lazy-loaded lazy-load-active" alt="" height="305.41" width="517.59">
-										</div>
-									</div>
-									<div class="contact_price">
-										<ul class="=&quot;address&quot;">
-											<h4>Địa Chỉ</h4>
-											<li>Ban Dao Linh Dam, Hoang
-												Liet, Hoang Mai, Ha Noi</li>
-										</ul>
-										<ul class="=&quot;phone&quot;">
-											<h4>Điện thoại</h4>
-											<li>
-												<a href="tel:0907305010" rel="nofollow">
-													<img class="lazy-load-active" src="./../assets/icon_phone_price.svg" data-src="https://devteam.mobi/wp-content/uploads/2019/06/icon_phone_price.svg" alt="">0907.30.50.10
-												</a>
-											</li>
-											<li>
-												<a href="tel:0866068861" rel="nofollow">
-													<img class="lazy-load-active" src="./../assets/icon_phone_price.svg" data-src="https://devteam.mobi/wp-content/uploads/2019/06/icon_phone_price.svg" alt="">0866.068.861
-												</a>
-											</li>
-										</ul>
-									</div>
-								</div>
-							</div>
-							<div class="col form-price-cs medium-12 small-12 large-6">
-								<div class="col-inner" style="padding:40px 8px !important;;margin:0px 0px 55px 0px;">
-									<div role="form" class="wpcf7" id="wpcf7-f13790-p13782-o2" lang="vi" dir="ltr">
-										<div class="screen-reader-response"></div>
-										<form action="https://devteam.mobi/yeu-cau-bao-gia/#wpcf7-f13790-p13782-o2" method="post" class="wpcf7-form" novalidate="novalidate">
-											<div style="display: none;"> 
-												<input type="hidden" name="_wpcf7" value="13790"> 
-												<input type="hidden" name="_wpcf7_version" value="5.1.3"> 
-												<input type="hidden" name="_wpcf7_locale" value="vi"> 
-												<input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f13790-p13782-o2"> 
-												<input type="hidden" name="_wpcf7_container_post" value="13782">
-											</div>
-											<div id="form-bao-gia">
-												<h4>Thông tin</h4>
-												<div class="input-col-12">
-													<div class="fieldset_custom">
-														<fieldset>
-															<legend>Tên của bạn( bắt buộc)</legend>
-															<p> 
-																<label>
-																	<span class="wpcf7-form-control-wrap your-name">
-																		<input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false">
-																	</span> 
-																</label>
-																<br>
-															</p>
-														</fieldset>
-													</div>
-												</div>
-												<div class="input-col-12">
-													<div class="fieldset_custom">
-														<fieldset>
-															<legend>Số điện thoại( bắt buộc)</legend>
-															<p> 
-																<label>
-																	<span class="wpcf7-form-control-wrap tel-483">
-																		<input type="tel" name="tel-483" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-tel wpcf7-validates-as-required wpcf7-validates-as-tel" aria-required="true" aria-invalid="false">
-																	</span>
-																</label>
-																<br>
-															</p>
-														</fieldset>
-													</div>
-												</div>
-												<div class="input-col-12">
-													<div class="fieldset_custom">
-														<fieldset>
-															<legend>Email ( bắt buộc)</legend>
-															<p> 
-																<label>
-																	<span class="wpcf7-form-control-wrap tel-483">
-																		<input type="tel" name="tel-483" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-tel wpcf7-validates-as-required wpcf7-validates-as-tel" aria-required="true" aria-invalid="false">
-																	</span>
-																</label>
-																<br>
-															</p>
-														</fieldset>
-													</div>
-												</div>
-												<div class="clearfix"></div>
-												<div class="fieldset_custom padding_last">
-													<fieldset>
-														<legend>Mô tả</legend>
-														<p> 
-															<span class="wpcf7-form-control-wrap your-message">
-																<textarea name="your-message" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea" aria-invalid="false"></textarea>
-															</span>
-														</p>
-													</fieldset>
-												</div>
-												<p>
-													<input type="hidden" name="wpcf7_telegram" value="1">
-													<br> 
-													<input type="submit" value="Gửi đi" class="wpcf7-form-control wpcf7-submit submit_price">
-													<span class="ajax-loader"></span>
-												</p>
-											</div>
-											<div class="wpcf7-response-output wpcf7-display-none"></div>
-											<input type="hidden" name="HYFJSW" value="RBpeTd">
-											<input type="hidden" name="HPQVfDxbI" value="MG6pwQ5.A">
-											<input type="hidden" name="Ar-dxgalbB" value="RsI8QNXYK3">
-											<input type="hidden" name="SVEvXq-yM" value="KJCi7wHcg">
-										</form>
-									</div>
+									<h2 class="uppercase" style="text-align: center;">Liên Hệ</h2>
 								</div>
 							</div>
 						</div>
