--- a/views/home-Tulpo.ejs
+++ b/views/home-Tulpo.ejs
@@ -285,7 +285,7 @@
 									<a class="carousel-item active" href="#one!">
 										<div class="set-custom-slider"  style="position: relative; padding-right:5px;" >
 											<div style="position:absolute; top:-50px;">
-												<img src="https://lorempixel.com/800/400/food/2" style="width: 100px; height: 100px; border-radius:50%; border: 2px solid rgba(1, 1, 97, 0.199)">
+												<img src="./../assets/dung.png" style="width: 100px; height: 100px; border-radius:50%; border: 2px solid rgba(1, 1, 97, 0.199)">
 											</div>
 											<div style="background: rgba(128, 128, 128, 0);padding: 10px 50px; margin-left: 50px; margin-top:50px; border-radius: 20px; box-shadow: grey 1px 4px 1px 1px;">
 												<h5 style="text-align: center;"><strong>- Đặng Mạnh Dũng -</strong></h5>
@@ -299,7 +299,7 @@
 									<a class="carousel-item" href="#two!">
 										<div class="set-custom-slider"  style="position: relative; padding-right:5px;" >
 											<div style="position:absolute; top:-50px;">
-												<img src="https://lorempixel.com/800/400/food/2" style="width: 100px; height: 100px; border-radius:50%; border: 2px solid rgba(1, 1, 97, 0.199)">
+												<img src="./../assets/hoang.png" style="width: 100px; height: 100px; border-radius:50%; border: 2px solid rgba(1, 1, 97, 0.199)">
 											</div>
 											<div style="background: rgba(128, 128, 128, 0);padding: 10px 50px; margin-left: 50px; margin-top:50px; border-radius: 20px; box-shadow: grey 1px 4px 1px 1px;">
 												<h5 style="text-align: center;"><strong>- Nguyễn Hoàng -</strong></h5>
@@ -313,7 +313,7 @@
 									<a class="carousel-item" href="#three!">
 										<div class="set-custom-slider"  style="position: relative; padding-right:5px;" >
 											<div style="position:absolute; top:-50px;">
-												<img src="https://lorempixel.com/800/400/food/2" style="width: 100px; height: 100px; border-radius:50%; border: 2px solid rgba(1, 1, 97, 0.199)">
+												<img src="./../assets/tung.jpg" style="width: 100px; height: 100px; border-radius:50%; border: 2px solid rgba(1, 1, 97, 0.199)">
 											</div>
 											<div style="background: rgba(128, 128, 128, 0);padding: 10px 50px; margin-left: 50px; margin-top:50px; border-radius: 20px; box-shadow: grey 1px 4px 1px 1px;">
 												<h5 style="text-align: center;"><strong>- Trần Thanh Tùng -</strong></h5>
@@ -324,8 +324,31 @@
 											</div>
 										</div>
 									</a>
-								</div>
+									<div style="text-align:center">
+										<span class="dot"></span>
+										<span class="dot"></span>
+										<span class="dot"></span>
+									</div>
+									<style>
+										/* The dots/bullets/indicators */
+										.dot {
+										cursor: pointer;
+										height: 15px;
+										width: 15px;
+										margin: 0 2px;
+										background-color: #bbb;
+										border-radius: 50%;
+										display: inline-block;
+										transition: background-color 0.6s ease;
+										}
+		
+										.dot:hover {
+										background-color: #717171;
+										}
+									</style>
+								</div>	
 							</div>
+							
 						</div>
 					</div>
 				</div>
