--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -45,12 +45,12 @@
                                     </ul>
                                     <ul class="size-18 list-footer-address" style="padding-left: 5px;">
                                         <li><span class="color-white">Địa chỉ</span>
-                                            <p class="size-18"> Nơ 2 Bán đảo Linh Đàm</p>
+                                            <p class="size-18"> 129 Thanh Liệt, Thanh Trì , Hà Nội</p>
                                         </li>
                                     </ul>
                                     <ul class="size-18 list-footer-contact" style="padding-left: 5px;">
                                         <li><span class="color-white">Liên hệ</span>
-                                            <p class="size-18">Nhân sự - <a title="Nhân sự" rel="nofollow" href="tel:0907305010">0907.30.50.10 </a> Kỹ thuật - <a title="Kỹ thuật"
+                                            <p class="size-18">Nhân sự - <a title="Nhân sự" rel="nofollow" href="tel:0968239503">0968.239.503 </a><br> Kỹ thuật - <a title="Kỹ thuật"
                                                     rel="nofollow" href="tel:0866068861">0866.068.861</a></p>
                                         </li>
                                     </ul>
