--- a/views/price-Tulpo.ejs
+++ b/views/price-Tulpo.ejs
@@ -27,20 +27,19 @@
 								<div class="col-inner" style="padding:0px 10px 0px 10px;">
 									<div class="img has-hover x md-x lg-x y md-y lg-y" id="image_1464777048">
 										<div class="img-inner dark"> 
-											<img src="./../assets/custom-talk.jpg" data-src="./../assets/custom-talk.jpg" class="attachment-large size-large lazy-loaded lazy-load-active" alt="" height="305.41" width="517.59">
+											<img src="./../assets/team-home.jpg" data-src="./../assets/team-home.jpg" class="attachment-large size-large lazy-loaded lazy-load-active" alt="" height="305.41" width="517.59">
 										</div>
 									</div>
 									<div class="contact_price">
 										<ul class="=&quot;address&quot;">
 											<h4>Địa Chỉ</h4>
-											<li>Ban Dao Linh Dam, Hoang
-												Liet, Hoang Mai, Ha Noi</li>
+											<li>129 Thanh Liệt, Thanh Trì, Hà Nội</li>
 										</ul>
 										<ul class="=&quot;phone&quot;">
 											<h4>Điện thoại</h4>
 											<li>
-												<a href="tel:0907305010" rel="nofollow">
-													<img class="lazy-load-active" src="./../assets/icon_phone_price.svg" data-src="https://devteam.mobi/wp-content/uploads/2019/06/icon_phone_price.svg" alt="">0907.30.50.10
+												<a href="tel:0968239503" rel="nofollow">
+													<img class="lazy-load-active" src="./../assets/icon_phone_price.svg" data-src="https://devteam.mobi/wp-content/uploads/2019/06/icon_phone_price.svg" alt="">0968.239.503
 												</a>
 											</li>
 											<li>
@@ -49,6 +48,12 @@
 												</a>
 											</li>
 										</ul>
+									</div>
+									<div>
+										<h4 style="font-weight: bold;">Tulpo- Hô Là Có</h4>
+										<p style="font-size: 18px;">Chúng tôi luôn sẵn sàng gọi điện tư vấn và làm cho ý tưởng,
+											yêu cầu của bạn rõ ràng hơn. Nếu bạn không tiện nghe máy,
+											hãy để lại yêu cầu, chúng tôi sẽ liên hệ bạn sớm nhất</p>
 									</div>
 								</div>
 							</div>
